Compiler Bouw/compiler/test/basic/stephen/fail/types_funcall.cvc
// Should produce a type checking error because funcalls also have a type.

#include "civic.h"

float kaas() {
    return 6.0;
}

export int main() {
    int a = 0;
    a = a + kaas();
    return 0;
}
